# OneLLM

./: .env.ci  .gitignore  Cargo.toml  Claude.json  DeepSeek.json  Dockerfile  Gemini.json  LICENSE.md  OpenAI.json  README.md  deploy_key.pub  one-off.html
.github/workflows/: deploy.yml  release.yml  rust.yml
frontend/: dashboard.html  docs.html  index.html  login.html  pricing.html  signup.html
frontend/about/: index.html
frontend/assets/js/: main.js
frontend/home/: index.html  script.js
migrations/: 0001_userdata_table.sql
oneAI-backend/: Cargo.toml
oneAI-backend/migrations/: 0001_userdata_table.sql  0002_apikey_table.sql
oneAI-backend/src/: auth.rs  database.rs  main.rs  payment.rs  pricing.rs  server.rs  testing.rs  utils.rs
oneAI-backend/src/auth/: basicauth.rs  mod.rs  twofa.rs  verify.html
oneAI-backend/src/requests/: mod.rs  parseapi.rs  requests.rs
oneAI-backend/src/requests/clients/: anthropic.rs  deepseek.rs  gemini.rs  openai.rs
oneAI-backend/src/requests/responseparser/: anthropic.rs  deepseek.rs  gemini.rs  mistral.rs  mod.rs  openai.rs
onellm/: Cargo.toml
onellm/src/: input.rs
server/: Cargo.toml
server/frontend/boilerplate/: boilerplate.html
server/src/: auth.rs  server.rs  utils.rs
splitllm/: Cargo.toml
splitllm/src/: lib.rs  prompt.txt
src/: auth.rs  database.rs  lib.rs  main.rs  requests.rs  server.rs  utils.rs
