[package]
name = "oneAI-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
serde_json = "1.0.140"
serde = "1.0.219"
zxcvbn = "2"
password-auth = "1.0.0"
argon2 = "0.5.3"
rand = "0.9.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
http = "1.3.1"
